Update to mapbox tiles.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <!-- DO NOT TOUCH - Combines these styles into one file -->
     <!-- build:css assets/css/style.css -->
-    <link rel="stylesheet" href="assets/libs/leaflet-0.6.4/leaflet.css" />
+    <link href='//api.mapbox.com/mapbox.js/v2.2.2/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" href="assets/libs/leaflet-markerCluster/MarkerCluster.css" />
     <link rel="stylesheet" href="assets/libs/leaflet-markerCluster/MarkerCluster.Default.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   	<!-- /build -->
-  	
+
     <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'  type='text/css'>
     <link rel="shortcut icon" href="favicon.ico" />
 
