--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                 <div class="body-text">Accurately track the GPS location of all available MTA Buses in New York City.</div>
             </div>
 
-            <script type="text/javascript">
-              ( function() {
-                if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
-                var unit = {"calltype":"async[2]","publisher":"metroly","width":468,"height":60,"sid":"Chitika Default"};
-                var placement_id = window.CHITIKA.units.length;
-                window.CHITIKA.units.push(unit);
-                document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
-            }());
+            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- MetrolyLanding -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9633098363773567"
+                     data-ad-slot="3075451342"
+                     data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-            <script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
         </div>
 
         <footer id='main-footer'>
